--- a/src/components/section/actions/index.module.pcss
+++ b/src/components/section/actions/index.module.pcss
@@ -1,7 +1,8 @@
 .action {
     display: grid;
     align-items: center;
-    justify-items: flex-start;
+    text-align: left;
+    width: 100%;
     grid-gap: 8px;
 
     &_label {
