--- a/src/routes/project-request/components/edit-requirements/index.module.pcss
+++ b/src/routes/project-request/components/edit-requirements/index.module.pcss
@@ -1,13 +1,20 @@
-.tab-content {
-    margin-top: 32px;
-}
+.edit-requirements {
 
-.position {
-    display: grid;
-    grid-template-columns: 1fr auto;
-    grid-gap: 16px;
-}
+    &__tab-content {
+        margin-top: 32px;
+    }
 
-.name-gap {
-    margin-bottom: 32px;
+    &__position {
+        display: grid;
+        grid-template-columns: 1fr auto;
+        grid-gap: 16px;
+    }
+
+    &__name-gap {
+        margin-bottom: 32px;
+    }
+
+    &__empty {
+        font-size: 14px;
+    }
 }
