--- a/src/routes/project-request/candidates/index.module.pcss
+++ b/src/routes/project-request/candidates/index.module.pcss
@@ -118,11 +118,48 @@
         color: var(--color-gray-120);
         font-size: 12px;
         line-height: 14px;
+
+        @media (hover: hover) and (pointer: fine) {
+
+            &:hover {
+                cursor: pointer;
+            }
+        }
+    }
+
+    &__star-form {
+        display: grid;
+        grid-auto-flow: column;
+        grid-auto-columns: max-content;
+        grid-gap: 8px;
+        justify-content: center;
+        margin: 24px 0;
+    }
+
+    &__star {
+        stroke: var(--color-gray-100);
+        fill: none;
+        width: 60px;
+        height: 60px;
+
+        &_active {
+            fill: var(--color-dark-orange);
+            stroke: var(--color-dark-orange);
+        }
+
+        @media (hover: hover) and (pointer: fine) {
+
+            &:hover {
+                cursor: pointer;
+                fill: var(--color-dark-orange);
+                stroke: var(--color-dark-orange);
+            }
+        }
     }
 
     &__user-info-exp-star-icon {
-        width: 12px;
-        height: 12px;
+        width: 20px;
+        height: 20px;
         fill: var(--color-gray-120);
         margin-right: 4px;
     }
