SC-27 organization project

--- a/src/routes/project-request/candidates/index.module.pcss
+++ b/src/routes/project-request/candidates/index.module.pcss
@@ -73,7 +73,7 @@
         grid-auto-columns: max-content;
         grid-template-rows: max-content;
         align-items: center;
-        justify-content: space-between;
+        justify-content: flex-end;
     }
 
     &__user-info-exp-years {
