SC-26 Fix role modal

--- a/src/components/modal/index.module.pcss
+++ b/src/components/modal/index.module.pcss
@@ -19,6 +19,7 @@
 
     &__header-wrapper_with-back {
         grid-template-columns: min-content 1fr;
+        grid-gap: 16px;
     }
 
     &__header-wrapper_with-close {
