--- a/src/routes/project-request/components/edit-requirements/index.module.pcss
+++ b/src/routes/project-request/components/edit-requirements/index.module.pcss
@@ -8,6 +8,7 @@
         display: grid;
         grid-template-columns: 1fr auto;
         grid-gap: 16px;
+        align-items: center;
     }
 
     &__name-gap {
