--- a/src/components/form/textarea/index.module.pcss
+++ b/src/components/form/textarea/index.module.pcss
@@ -5,11 +5,10 @@
     box-sizing: border-box;
     border-radius: 4px;
     height: 40px;
-    line-height: 38px;
     width: 100%;
     font-weight: 400;
     font-size: 14px;
-    padding: 0 12px;
+    padding: 12px;
     color: var(--color-sidebar-header);
     resize: vertical;
     font-family: Roboto, sans-serif;
