--- a/src/components/modal/index.module.pcss
+++ b/src/components/modal/index.module.pcss
@@ -36,11 +36,17 @@
 
     &__footer {
         border-top: solid 1px var(--color-form-border);
-        padding: 24px 32px;
         display: grid;
+        padding: 24px 32px;
         grid-auto-flow: column;
-        grid-column-gap: 12px;
+        grid-template-columns: min-content min-content;
         align-items: center;
+        justify-content: flex-end;
+        column-gap: 12px;
+
+        &_with-action {
+            grid-template-columns: 1fr min-content min-content;
+        }
     }
 
     &__button {
