--- a/src/components/section/content-list-item/index.module.pcss
+++ b/src/components/section/content-list-item/index.module.pcss
@@ -2,6 +2,7 @@
     display: grid;
     grid-auto-flow: column;
     grid-template-columns: 150px 1fr;
+    grid-gap: 16px;
     color: var(--color-black);
     white-space: pre-line;
 }
