--- a/src/components/section/header/index.module.pcss
+++ b/src/components/section/header/index.module.pcss
@@ -1,6 +1,7 @@
 .section__header-wrapper {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .section__header-actions {
