--- a/src/components/loader/index.module.pcss
+++ b/src/components/loader/index.module.pcss
@@ -1,7 +1,7 @@
 .loader {
     display: flex;
     width: 100%;
-    height: 100%;
+    max-height: 100%;
     justify-content: center;
     align-items: center;
 }
