--- a/src/components/section/content-list-item/index.module.pcss
+++ b/src/components/section/content-list-item/index.module.pcss
@@ -1,8 +1,12 @@
-.section__content-list-item {
-    display: grid;
-    grid-auto-flow: column;
-    grid-template-columns: 150px 1fr;
-    grid-gap: 16px;
-    color: var(--color-black);
-    white-space: pre-line;
+.section {
+
+    &__content-list-item {
+        display: grid;
+        grid-auto-flow: column;
+        grid-template-columns: 150px 1fr;
+        grid-gap: 16px;
+        color: var(--color-black);
+        white-space: pre-line;
+        align-items: baseline;
+    }
 }
