--- a/src/routes/project-request/components/edit-requirements/index.module.pcss
+++ b/src/routes/project-request/components/edit-requirements/index.module.pcss
@@ -18,4 +18,10 @@
     &__empty {
         font-size: 14px;
     }
+
+    &__skills {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 8px;
+    }
 }
