SC-28 iteration 4 fun points

--- a/src/routes/fun-points/form/index.module.pcss
+++ b/src/routes/fun-points/form/index.module.pcss
@@ -46,4 +46,12 @@
         grid-auto-flow: column;
         grid-auto-columns: 3fr 1fr 1fr 40px;
     }
+
+    &__field-controls {
+        display: grid;
+        grid-gap: 16px;
+        grid-auto-flow: column;
+        grid-auto-columns: 1fr 120px;
+        align-items: flex-end;
+    }
 }
