--- a/src/components/form/input/index.module.pcss
+++ b/src/components/form/input/index.module.pcss
@@ -21,6 +21,10 @@
         opacity: 0.7;
     }
 
+    &:disabled {
+        background-color: var(--color-input-disabled);
+    }
+
     &__label {
         display: grid;
         grid-auto-flow: row;
