--- a/src/components/layout/index.pcss
+++ b/src/components/layout/index.pcss
@@ -24,6 +24,7 @@
     --color-shadow-popup: 0 1px 4px rgba(0, 0, 0, 0.25);
     --color-border: #dfdfdf;
     --color-border-input: #d9d9d9;
+    --color-input-disabled: rgba(224, 224, 224, 0.25);
     --color-button-primary: #3a76ea;
     --color-button-primary-text: #fff;
     --color-button-primary-hover: rgba(58, 118, 234, 0.9);
