--- a/src/components/section/content-list-item/index.module.pcss
+++ b/src/components/section/content-list-item/index.module.pcss
@@ -6,7 +6,7 @@
         grid-template-columns: 150px 1fr;
         grid-gap: 16px;
         color: var(--color-black);
-        white-space: pre-line;
+        white-space: pre-wrap;
         align-items: baseline;
     }
 }
