--- a/src/routes/person/career/index.module.pcss
+++ b/src/routes/person/career/index.module.pcss
@@ -68,6 +68,7 @@
         line-height: 24px;
         color: var(--color-black);
         align-items: baseline;
+        white-space: pre-wrap;
 
         strong {
             font-weight: normal;
