--- a/src/routes/person/common/index.module.pcss
+++ b/src/routes/person/common/index.module.pcss
@@ -187,6 +187,7 @@
         font-size: 14px;
         line-height: 16px;
         color: var(--color-black);
+        white-space: pre-wrap;
 
         strong {
             font-weight: normal;
