--- a/src/routes/person/files/index.module.pcss
+++ b/src/routes/person/files/index.module.pcss
@@ -74,6 +74,7 @@
         color: var(--color-black);
         justify-content: flex-start;
         fill: var(--color-file-icon);
+        white-space: pre-wrap;
 
         a {
             color: inherit;
