--- a/src/routes/person/competencies/edit/index.module.pcss
+++ b/src/routes/person/competencies/edit/index.module.pcss
@@ -122,6 +122,7 @@
         font-size: 14px;
         line-height: 16px;
         color: var(--color-black);
+        white-space: pre-wrap;
 
         strong {
             font-weight: normal;
