--- a/src/routes/dashboard/index.module.pcss
+++ b/src/routes/dashboard/index.module.pcss
@@ -23,6 +23,7 @@
         border-radius: 6px;
         border: 1px solid var(--color-border);
         padding: 16px;
+        overflow: hidden;
 
         & > div {
             max-width: 28px;
@@ -41,6 +42,10 @@
         font-size: 24px;
         line-height: 32px;
         color: var(--color-text-dark);
+        min-width: 32px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     &__link {
