SC-25 huge fixes

--- a/src/components/form/input/index.module.pcss
+++ b/src/components/form/input/index.module.pcss
@@ -23,6 +23,7 @@
 
     &:disabled {
         background-color: var(--color-input-disabled);
+        color: var(--color-gray-120);
     }
 
     &__label {
