--- a/src/components/layout/index.pcss
+++ b/src/components/layout/index.pcss
@@ -25,6 +25,7 @@
     --color-border: #dfdfdf;
     --color-border-input: #d9d9d9;
     --color-input-disabled: rgba(224, 224, 224, 0.25);
+    --color-input-text-disabled: #9a9a9a;
     --color-button-primary: #3a76ea;
     --color-button-primary-text: #fff;
     --color-button-primary-hover: rgba(58, 118, 234, 0.9);
