--- a/src/routes/organizations/index.module.pcss
+++ b/src/routes/organizations/index.module.pcss
@@ -5,6 +5,7 @@
         position: relative;
         display: grid;
         grid-gap: 16px;
+        grid-template-columns: 1fr 40px;
 
         &::after {
             content: "";
@@ -28,6 +29,10 @@
         &:last-child {
             padding-bottom: 0;
         }
+    }
+
+    &__list-item-actions {
+        margin-top: -10px;
     }
 
     &__form {
