--- a/src/routes/system-users/index.module.pcss
+++ b/src/routes/system-users/index.module.pcss
@@ -12,6 +12,20 @@
         padding: 0;
     }
 
+    &__user-info {
+        display: grid;
+        grid-row-gap: 6px;
+        padding: 5px 0;
+    }
+
+    &__user-wrapper {
+        display: grid;
+        grid-template-columns: 1fr 40px;
+        padding: 16px 0;
+        grid-gap: 16px;
+        border-top: 1px solid var(--color-gray-30);
+    }
+
     &__user {
         display: grid;
         grid-auto-flow: column;
@@ -23,23 +37,12 @@
             margin: 16px 0;
         }
 
-        & > div {
-            padding: 16px 0;
-            border-top: 1px solid #E6E8EB;
-        }
-
         &:first-child {
 
             & > div {
                 border-top: none;
             }
         }
-    }
-
-    &__user-info {
-        display: grid;
-        grid-row-gap: 6px;
-        padding: 5px 0;
     }
 
     &__name,
@@ -50,19 +53,33 @@
         font-weight: 500;
         font-size: 14px;
         line-height: 16px;
-        color: #282C33;
+        color: var(--color-text-dark);
+    }
+
+    &__name {
+        display: grid;
+        grid-gap: 16px;
+        grid-template-columns: 1fr max-content;
     }
 
     &__project {
         font-weight: normal;
 
         & > span {
-            color: #E6E8EB;
+            color: var(--color-gray-30);
         }
     }
 
     &__form {
         display: grid;
         grid-row-gap: 24px;
+    }
+
+    &__actions {
+        border-top: none;
+    }
+
+    &__blocked {
+        color: var(--color-text-light);
     }
 }
