--- a/src/routes/specialists/user-item/index.module.pcss
+++ b/src/routes/specialists/user-item/index.module.pcss
@@ -72,6 +72,7 @@
         display: grid;
         grid-gap: 8px;
         grid-auto-rows: max-content;
+        justify-content: flex-end;
     }
 
     &__user-info-exp-add {
