--- a/src/components/project-cards/index.module.pcss
+++ b/src/components/project-cards/index.module.pcss
@@ -9,6 +9,11 @@
         margin-top: 21px;
     }
 
+    &__cards-add-form {
+        display: grid;
+        grid-gap: 16px;
+    }
+
     &__card {
         display: grid;
         grid-gap: 8px;
@@ -47,7 +52,7 @@
     }
 
     &__add-card {
-        margin-left: 10 px;
+        margin-left: 10px;
         color: var(--color-text-dark);
         font-family: Roboto, sans-serif;
         font-size: 14px;
@@ -76,7 +81,6 @@
     &__cards-column {
         display: grid;
         align-items: center;
-        margin-top: 32px;
         grid-gap: 32px;
     }
 }
