--- a/src/routes/system-users/index.module.pcss
+++ b/src/routes/system-users/index.module.pcss
@@ -20,10 +20,14 @@
 
     &__user-wrapper {
         display: grid;
-        grid-template-columns: 1fr 40px;
+        grid-template-columns: 1fr;
         padding: 16px 0;
         grid-gap: 16px;
         border-top: 1px solid var(--color-gray-30);
+
+        &_permissions {
+            grid-template-columns: 1fr 40px;
+        }
     }
 
     &__user {
