SC-25 system users permissions and dashboard

--- a/src/components/layout/sidebar/index.module.pcss
+++ b/src/components/layout/sidebar/index.module.pcss
@@ -7,7 +7,7 @@
     max-width: 992px;
 
     &_alone {
-        grid-template-columns: 1fr;
+        grid-template-columns: 100%;
     }
 
     &__main {
