SC-25 competence max width

--- a/src/routes/specialists/user-item/index.module.pcss
+++ b/src/routes/specialists/user-item/index.module.pcss
@@ -129,6 +129,7 @@
         text-align: center;
         font-weight: 400;
         position: relative;
+        max-width: 400px;
     }
 
     &__user-linked {
