--- a/src/routes/organizations/index.module.pcss
+++ b/src/routes/organizations/index.module.pcss
@@ -34,6 +34,19 @@
         }
     }
 
+    &__list-item-content {
+        display: grid;
+        grid-gap: 16px;
+    }
+
+    &__list-item-sub-head {
+        font-style: normal;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 20px;
+        color: var(--color-text-dark);
+    }
+
     &__list-item-actions {
         margin-top: -10px;
     }
