--- a/src/routes/dictionary/edit-dialog.module.pcss
+++ b/src/routes/dictionary/edit-dialog.module.pcss
@@ -23,4 +23,9 @@
         grid-gap: 24px;
         margin-top: 8px;
     }
+
+    &__form {
+        display: grid;
+        grid-row-gap: 24px;
+    }
 }
