--- a/src/routes/dictionary/common.module.pcss
+++ b/src/routes/dictionary/common.module.pcss
@@ -8,6 +8,11 @@
         grid-column-gap: 24px;
     }
 
+    &__header-form {
+        display: flex;
+        gap: 12px;
+    }
+
     &__button {
         justify-self: flex-start;
     }
